--- a/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
@@ -1,8 +1,8 @@
 <div class="sudoku-controls">
     <div class="sudoku-controls-row">
-        <button class="mark-mode btn btn-info" data-toggle="button">Режим пометок</button>
+        <button class="mark-mode btn btn-info" data-toggle="button" title="Hotkey: ~">Режим пометок</button>
     </div>
-    <div class="sudoku-controls-row">
+    <div class="sudoku-controls-row" title="Hotkeys: 1-9 and 0">
         <div class="sudoku-numpad">
             <table>
                 <?php /*
