--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -1,22 +1,114 @@
-<div class="content">
+<div class="content game-description">
+
     <h1>Судоку</h1>
-    <p>
-        Логическая игра, в которой нужно заполнить поле цифрами, придерживаясь определенных правил.<br>
-        В Википедии вы можете почитать подробную
-        <a href="http://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%B4%D0%BE%D0%BA%D1%83" rel="nofollow" target="_blank" class="wiki-link">статью об игре</a>.
-    </p>
-    <div class="game-board-example">
-        <?php echo $this->partial('_partials/sudoku-board.phtml', ['parameters' => $this->boardExample]); ?>
-        <span class="image-info">(Пример головоломки "Судоку")</span>
+    
+    <div class="section">
+        <p>
+            Логическая игра, в которой нужно заполнить поле цифрами, придерживаясь определенных правил.<br>
+            В Википедии вы можете почитать подробную
+            <a href="http://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%B4%D0%BE%D0%BA%D1%83" rel="nofollow" target="_blank" class="wiki-link">статью об игре</a>.
+        </p>
     </div>
-    <p>
-        <span class="sudoku-game-goal">Цель игры:</span><br>
-        Необходимо заполнить поле цифрами от 1 до 9 так, чтоб в каждой колонке, строчке и под-квадрате не было повторяющихся цифр.
-    </p>
-    <div class="game-board-example">
-        <?php echo $this->partial('_partials/sudoku-board.phtml', ['parameters' => $this->boardSolvedExample]); ?>
-        <span class="image-info">(Пример решенной головоломки "Судоку")</span>
+
+    <div class="section">
+        <p class="title">Цель игры:</p>
+        <p>
+            Необходимо заполнить поле цифрами от 1 до 9 так, чтоб в каждой колонке, строчке и под-квадрате не было повторяющихся цифр.
+        </p>
     </div>
+
+    <div class="section">
+        <?php $size = 'small'; ?>
+        <div class="game-board-example-container <?php echo $size; ?>">
+            <div class="game-board-example pull-left">
+                <?php echo $this->partial('_partials/sudoku-board.phtml', ['size' => $size, 'parameters' => $this->boardExample]); ?>
+                <span class="image-info">(Пример головоломки "Судоку")</span>
+            </div>
+            <div class="game-board-example pull-right">
+                <?php echo $this->partial('_partials/sudoku-board.phtml', ['size' => $size, 'parameters' => $this->boardSolvedExample]); ?>
+                <span class="image-info">(Пример решенной головоломки "Судоку")</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <p class="title">Как решать головоломку:</p>
+        <p>
+            Для поиска решения используют определенные способы.
+            Здесь представлены некоторые из них.
+        </p>
+        <p>
+            Вы сосредотачиваетесь на определенной цифре и находит все ее известные позиции.
+            Далее исключаете горизонтальные и вертикальные линии, т.к. не может быть повторений этой цифры в этоих рядах/колонках.
+            Ищите пустые клеточки, в которых обязательно должна находиться выбранная цифра.
+            Это может быть единственная доступная позиция для данной цифры в определенном квадрате, ряде или колонке.
+            Цифра обязательно должна присутствовать в каждом квадрате, ряде и колонке - поэтому вы можете смело ставить туда эту цифру.
+        </p>
+        <p>
+            Если вы видите, что в квадрате, ряде или колонке осталась одна пустая клеточка, то проверив какая именно цифра отсутсвует, можете смело ее ставить.
+        </p>
+        <p>
+            В процессе проверки полей будте внимательны.
+            Не спешите ставить цифры.
+            Если вы допустите ошибку, то найти ее и исправить будет не просто.
+        </p>
+        <p>
+            В игре доступны пометки.
+            Вы можете их ставить в пустые клеточки, чтоб не забыть какие цифры возможны в данной клеточке.
+            Если расставив все возможные пометки по всему полю, вы обнаружите, что в какой-то позиции возможно только одна цифра, то можете ее ставить.
+            Возможно вы найдете что в каком-то квадрате, ряде или колонке доступна только одна позиции для определенной цифры - можете поставить эту цифру в данную позицию.
+            Данные варианты поиска верны только если вы верно расставляете пометки.
+            Будте внимательны.
+        </p>
+        <p>
+            В игре может быть сложная ситуация, когда вы не можете найти ниодного однозначного хода.
+            В данном случае можете попробовать сделать ход в клеточку с вариантом 50/50 и продложить решение.
+            Как только вы найдете ошибку, то с помощью кнопки "Отменить ход" вы можете отменить все ходы вплоть до роковохо хода 50/50.
+            Вы проверили один из вариатов 50/50 и убедились, что он не верный - можете смело ставить другой варинт и продолжить игру.
+        </p>
+    </div>
+
+    <div class="section">
+        <p class="title">Как играть:</p>
+        <p>
+            Для разгадывания головоломки вам нужно выбрать пустую клеточку, нажав на нее.
+            После этого выбирите цифру на панели справа, которую хотите отметить в выбранную клеточку.
+            Как только поле будет заполнено, игра проверит ваше решение на наличие ошибок.
+            И если ошибок нет, то принимайте поздравления! Вы решили головоломку правильно!
+        </p>
+        <p>
+            Для удобства вы можете нажать на пустую клеточку и, неотпуская кнопки, подождать пару секунд.
+            Над этой клеточкой появятся цифры для выбора какую вы хотите отменить в данную клеточку.
+            Не отпуская кнопку, наведите курсор на нужную цифры и отпустите.
+        </p>
+        <p>
+            В игре есть режим пометок.
+            Он значительно облегчает игру.
+            Пометками вы можете отмечать возможные позиции цифр на поле.
+            Включите режим и отмечайте цифры на поле точно так же, как и обычные ходы.
+            Вы можете пометить все возможные варианты цифр в одной клеточке.
+        </p>
+        <p>
+            Для более быстрой игры на компьютере вы можете использовать "горячие клавиши".
+            Выбрав поле, вы можете нажать цифру на клавиатуре от 1 до 9 и отметить эту цифру в поле.
+            Цифра 0 очищает поле.
+            Эти цифры можете использовать и в режиме пометок.
+            Для быстрого включения и выключения режима пометок можете исползьвать кнопки "~" (обычно слева от 1 в левой части клавиатуры. Она же буква "ё") и "*" на цифровой клавиатуре.
+            Также вы можете навести курсор на элемент интерфейса и если данный элемент имеет "горячую клавишу", то в всплывающей подсказке вам сообщат об этом.
+        </p>
+        <p>
+            Также вы можете пользоваться кнопками "Отменить ход" и "Повторить ход" для поиска ошибок и исправления их.
+        </p>
+        <p>
+            Кнопка "Проверить поле" проверяет установленные цифры на поле на наличие ошибок.
+            Если ошибки будут обнаружены, то они подсветятся, чтоб вы обратили на них внимание.
+        </p>
+        <p>
+            Красная кнопка "Очистить поле" может вам понадобиться, когда вы запутались и хотите начать разгадывать данную головоломку сначала.
+            Эта кнопка очистит поле от ваших цифр и пометок.
+        </p>
+    </div>
+
     <div class="to-top">
         <a href="" class="scroll-to-top">Вверх <i class="icon-chevron-up"></i></a>
     </div>
