--- a/public/less/sudoku-variables.less
+++ b/public/less/sudoku-variables.less
@@ -16,8 +16,8 @@
 @sudoku-default-board-cell-border-width: 1px;
 @sudoku-default-board-cell-border-style: solid;
 @sudoku-default-board-cell-font-size: 1.5em;
-@sudoku-default-success-board-cell-border-color: #080;
 @sudoku-default-board-cell-box-sizing: border-box;
+@sudoku-default-success-board-cell-border-color: #080;
 
 @sudoku-default-board-cell-selected-background-color: #ffb;
 @sudoku-default-board-cell-hover-background-color: #ffb;
@@ -28,6 +28,29 @@
 
 @sudoku-default-board-cell-number-hover-color: #383;
 @sudoku-default-board-cell-number-hover-background-color: #aba;
+
+@sudoku-default-board-mark-font-size: 0.6em;
+@sudoku-default-board-mark-line-height: @sudoku-default-board-mark-font-size + 0.4;
+@sudoku-default-board-mark-width: 12px;
+@sudoku-default-board-mark-height: @sudoku-default-board-mark-width;
+
+@sudoku-small-board-cell-width: 20px;
+@sudoku-small-board-cell-height: @sudoku-small-board-cell-width;
+@sudoku-small-board-cell-font-size: 1em;
+
+@sudoku-small-board-mark-font-size: 0.3em;
+@sudoku-small-board-mark-line-height: @sudoku-small-board-mark-font-size + 0.4;
+@sudoku-small-board-mark-width: 7px;
+@sudoku-small-board-mark-height: @sudoku-small-board-mark-width;
+
+@sudoku-medium-board-cell-width: 30px;
+@sudoku-medium-board-cell-height: @sudoku-medium-board-cell-width;
+@sudoku-medium-board-cell-font-size: 1em;
+
+@sudoku-medium-board-mark-font-size: 0.5em;
+@sudoku-medium-board-mark-line-height: @sudoku-medium-board-mark-font-size + 0.4;
+@sudoku-medium-board-mark-width: 10px;
+@sudoku-medium-board-mark-height: @sudoku-medium-board-mark-width;
 
 // numpad
 @sudoku-numpad-default-table-border: 1px solid #000;
