--- a/application/modules/sudoku/views/scripts/index/create.ajax.phtml
+++ b/application/modules/sudoku/views/scripts/index/create.ajax.phtml
@@ -27,10 +27,10 @@ $titleTemplate = '%s (%s открытых клеток)';
             <button type="submit" class="btn btn-danger submit-form">Начать новую игру</button>
         </form>
     </div>
-    <div class="game-board-example">
-        <div class="game-board-example-container">
-            <?php echo $this->partial('_partials/sudoku-board.phtml', ['parameters' => $this->boardExample, 'hide' => true]); ?>
+    <div class="game-board-example-container medium">
+        <div class="game-board-example">
+            <?php echo $this->partial('_partials/sudoku-board.phtml', ['size' => 'medium', 'parameters' => $this->boardExample, 'hide' => true]); ?>
+            <span class="image-info">(Пример головоломки "Судоку")</span>
         </div>
-        <span class="image-info">(Пример головоломки "Судоку")</span>
     </div>
 </div>
