--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -63,7 +63,7 @@
         <p>
             В игре может быть сложная ситуация, когда вы не можете найти ниодного однозначного хода.
             В данном случае можете попробовать сделать ход в клеточку с вариантом 50/50 и продложить решение.
-            Как только вы найдете ошибку, то с помощью кнопки "Отменить ход" вы можете отменить все ходы вплоть до роковохо хода 50/50.
+            Как только вы найдете ошибку, то с помощью кнопки "Отменить ход" вы можете отменить все ходы вплоть до рокового хода 50/50.
             Вы проверили один из вариатов 50/50 и убедились, что он не верный - можете смело ставить другой варинт и продолжить игру.
         </p>
     </div>
@@ -78,8 +78,9 @@
         </p>
         <p>
             Для удобства вы можете нажать на пустую клеточку и, неотпуская кнопки, подождать пару секунд.
-            Над этой клеточкой появятся цифры для выбора какую вы хотите отменить в данную клеточку.
+            Над этой клеточкой появятся цифры.
             Не отпуская кнопку, наведите курсор на нужную цифры и отпустите.
+            Эта цифра будет отмечена в выбранную клеточку.
         </p>
         <p>
             В игре есть режим пометок.
@@ -93,7 +94,7 @@
             Выбрав поле, вы можете нажать цифру на клавиатуре от 1 до 9 и отметить эту цифру в поле.
             Цифра 0 очищает поле.
             Эти цифры можете использовать и в режиме пометок.
-            Для быстрого включения и выключения режима пометок можете исползьвать кнопки "~" (обычно слева от 1 в левой части клавиатуры. Она же буква "ё") и "*" на цифровой клавиатуре.
+            Для быстрого включения и выключения режима пометок можете исползьвать кнопки "~" (обычно слева от клавиши "1" в левой части клавиатуры. Она же буква "ё") и "*" на цифровой клавиатуре.
             Также вы можете навести курсор на элемент интерфейса и если данный элемент имеет "горячую клавишу", то в всплывающей подсказке вам сообщат об этом.
         </p>
         <p>
