--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -18,6 +18,7 @@ $this->headScript()
     ->prependFile('/js/global.js')
     ->prependFile('/js/bootstrap.js')
     ->prependFile('/js/jquery.md5.js')
+    ->prependFile('/js/jquery.cookie.js')
     ->prependFile('/js/jquery-2.0.3.js')
     ->prependFile('http://autobahn.s3.amazonaws.com/js/autobahn.js')
 ;
