--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1126,6 +1126,11 @@ body.users-rating .center-column table.users-rating.games-history tr.hlink:hover
 .game-board-example .sudoku-board {
   margin: 0 auto;
 }
+.create-new-game-container .buttons-container .buttons {
+  text-align: center;
+  width: 325px;
+  margin: 0 auto;
+}
 .center-column {
   z-index: 1100;
 }
