--- a/public/less/sudoku.less
+++ b/public/less/sudoku.less
@@ -113,3 +113,13 @@
     margin: 0 auto;
   }
 }
+
+.create-new-game-container {
+  .buttons-container {
+    .buttons {
+      text-align: center;
+      width: 325px;
+      margin: 0 auto;
+    }
+  }
+}
