--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -8,9 +8,10 @@
 
 @import "breadcrumbs";
 @import "create-game";
-@import "navigation-panel";
 @import "form";
+@import "navigation-panel";
 @import "login-register-modal";
+@import "server";
 @import "user-games-history";
 @import "users-rating";
 
